examples/gateway-api/manifests/standard/simple-http-https/bar-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar
spec:
  parentRefs:
  - name: example-gateway
    sectionName: https
  hostnames:
  - bar.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bar-app
      port: 80
---
# Following are resources not explicitely declared
apiVersion: v1
kind: Service
metadata:
  name: bar-app
