examples/gateway-api/manifests/standard/simple-http-https/foo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
  - name: example-gateway
    sectionName: https
  hostnames:
  - foo.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: foo-app
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /orders
    backendRefs:
    - name: foo-orders-app
      port: 80
---
# Following are resources not explicitely declared
apiVersion: v1
kind: Service
metadata:
  name: foo-app
---
apiVersion: v1
kind: Service
metadata:
  name: foo-orders-app
